[package]
name = "hid_ext"
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
# Compatible with Godot 4.6+ (stable as of January 2025)

[lib]
crate-type = ["cdylib"]

[dependencies]
# gdext pour Godot 4 - Version stable recommandée
godot = "0.4"  # Version 0.4.5 (dernière stable février 2026)

# HID API
hidapi = { version = "2.6", features = ["linux-shared-hidraw"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
